[project]
name = "stegastamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bchlib>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "tensorflow==2.10.1",
    "tensorflow-io-gcs-filesystem==0.27.0",
]
